Add outflow arrows

--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -32,6 +32,7 @@ contour_linewidth = 2.0
 contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
+enumerate_shift = 24
 # Units
 ignore_units = false
 labelpad = 5
@@ -57,8 +58,37 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G35.20_alma1_moment1]
+[G35.13_alma6_moment1]
 loc = 0 0
+source = G35.13-0.74
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -35.53 km/s
+label = ${source} ALMA6 CH$$_3$$CN
+# Range
+vmin = -4 km/s
+vmax = 4 km/s
+# Recenter
+center = 18h58m06.27972s +01d37m07.2029s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h58m06.262s +01d37m06.95s icrs
+scale_distance = 2.2 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 95 deg, 0 deg
+
+[G35.13_continuum]
+loc = 0 0
+contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G35.20_alma1_moment1]
+loc = 0 1
 source = G35.20-0.74_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -73,17 +103,42 @@ center = 18h58m12.95261s +01d40m37.3652s icrs
 # Artists
 scale = 18h58m12.922s +01d40m37.0s icrs
 scale_distance = 2.19 kpc
-arrows_pa = -10 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = -10 deg, 30 deg
+
+[G35.20_alma2_moment1]
+loc = 0 2
+source = G35.20-0.74_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = -30.0 km/s
+label = G35.20-0.74 N ALMA2 CH$$_3$$OH
+# Range
+vmin = -3 km/s
+vmax = 3 km/s
+# Recenter
+center = 18h58m13.03690s +01d40m35.9257s icrs
+# Artists
+scale = 18h58m13.008s +01d40m35.5s icrs
+scale_distance = 2.19 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = -23 deg, 3 deg
 
 [G35.20_continuum]
-loc = 0 0
+loc = 0 1, 0 2
 contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G351_alma2_moment1]
-loc = 0 1
+loc = 1 0
 source = G351.77-0.54
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -97,17 +152,46 @@ center = 17h26m42.53329s -36d09m17.3878s icrs
 # Artists
 scale = 17h26m42.495s -36d09m17.8s icrs
 scale_distance = 2.0 kpc
-arrows_pa = 130 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 130 deg, -24 deg
 
 [G351_continuum]
-loc = 0 1
+loc = 1 0
 contour = ${contdir}/G351.77-0.54.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
+[G5.89-0.37_alma14_moment1]
+loc = 1 1
+source = G5.89-0.37
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma14_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -7.92 km/s
+label = G5.89-0.37 ALMA14 CH$$_3$$CN
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h00m30.63209s -24d04m03.0057s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h00m30.614s -24d04m03.22s icrs
+scale_distance = 2.99 kpc
+arrows_pa = -30 deg
+
+[G5.89-0.37_continuum]
+loc = 1 1
+contour = ${contdir}/G5.89-0.37.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
 [I16562_alma1_moment1]
-loc = 0 2
+loc = 1 2
 source = IRAS_165623959
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -121,10 +205,14 @@ center = 16h59m41.62564s -40d03m43.6385s icrs
 # Artists
 scale = 16h59m41.59s -40d03m44.1s icrs
 scale_distance = 2.38 kpc
-arrows_pa = 10 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 10 deg, 100 deg
 
 [I16562_alma2_moment1]
-loc = 1 0
+loc = 2 0
 source = IRAS_165623959
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
@@ -138,17 +226,21 @@ center = 16h59m41.08769s -40d03m39.0848s icrs
 # Artists
 scale = 16h59m41.05s -40d03m39.5s icrs
 scale_distance = 2.38 kpc
-arrows_pa = 225 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 225 deg, 285 deg
 
 [I16562_continuum]
-loc = 0 2, 1 0
+loc = 1 2, 2 0
 contour = ${contdir}/IRAS_165623959.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [I18089_alma1_moment1]
-loc = 1 1
+loc = 2 1
 source = IRAS_180891732
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
@@ -163,10 +255,14 @@ radius = 0.6 arcsec
 # Artists
 scale = 18h11m51.42s -17d31m29.35s icrs
 scale_distance = 2.34 kpc
-arrows_pa = 245 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 245 deg, -12 deg
 
 [I18089_alma3_moment1]
-loc = 1 2
+loc = 2 2
 source = IRAS_180891732
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -181,17 +277,50 @@ radius = 0.3 arcsec
 # Artists
 scale = 18h11m51.38s -17d31m30.2s icrs
 scale_distance = 2.34 kpc
-arrows_pa = 315 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 315 deg, 35 deg
 
 [I18089_continuum]
-loc = 1 1, 1 2
+loc = 2 1, 2 2
 contour = ${contdir}/IRAS_180891732.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
+[IRAS18162_alma1_moment1]
+loc = 3 0
+source = IRAS_181622048
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
+shift_data = -45.69 km/s
+label = IRAS 18162-2048 ALMA1 c-HCOOH
+# Range
+vmin = -6 km/s
+vcenter = 0 km/s
+vmax = 10 km/s
+# Recenter
+center = 18h19m12.09528s -20d47m30.9566s icrs
+# Artists
+scale = 18h19m12.065s -20d47m31.4s icrs
+scale_distance = 1.30 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = -70 deg, 20 deg
+
+[IRAS18162_continuum]
+loc = 3 0
+contour = ${contdir}/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
 [I18182_alma1_moment1]
-loc = 2 0
+loc = 3 1
 source = IRAS_18182-1433
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -206,10 +335,14 @@ radius = 0.4 arcsec
 # Artists
 scale = 18h21m09.028s -14d31m48.1s icrs
 scale_distance = 3.58 kpc
-arrows_pa = 40 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 40 deg, 155 deg
 
 [I18182_alma2_moment1]
-loc = 2 1
+loc = 3 2
 source = IRAS_18182-1433
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -224,90 +357,15 @@ radius = 0.3 arcsec
 # Artists
 scale = 18h21m08.96s -14d31m47.805s icrs
 scale_distance = 3.58 kpc
-arrows_pa = 0 deg
-
-[I18182_alma3_moment1]
-loc = 2 2
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -61.12 km/s
-label = IRAS 18182-1433 ALMA3 CH$$_3$$CN
-# Range
-vmin = -7 km/s
-vmax = 7 km/s
-# Recenter
-center = 18h21m09.12462s -14d31m48.5998s icrs
-# Artists
-scale = 18h21m09.095s -14d31m49.0s icrs
-scale_distance = 3.58 kpc
-arrows_pa = 10 deg
-
-[I18182_alma5_moment1]
-loc = 3 0
-set_xlabel = true
-set_ylabel = true
-source = IRAS_18182-1433
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma5_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -62.7 km/s
-label = IRAS 18182-1433 ALMA5 CH$$_3$$CN
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 18h21m09.01613s -14d31m47.9401s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h21m08.999s -14d31m48.2s icrs
-scale_distance = 3.58 kpc
-arrows_pa = 40 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 0 deg, 90 deg
 
 [I18182_continuum]
-loc = 2 0, 2 1, 2 2, 3 0
-contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[NGC6334IN_alma1_moment1]
-loc = 3 1
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 1.77 km/s
-label = NGC 6334I(N) ALMA1 CH$$_3$$OH
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 17h20m55.19138s -35d45m03.9525s icrs
-# Artists
-scale = 17h20m55.158s -35d45m04.4s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 310 deg
-
-[NGC6334IN_alma2_moment1]
-loc = 3 2
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = 3.9 km/s
-#shift_data = -0.74 km/s
-label = NGC 6334I(N) ALMA2 CH$$_3$$OH
-# Range
-vmin = -5 km/s
-vmax = 5 km/s
-# Recenter
-center = 17h20m54.59280s -35d45m17.3686s icrs
-# Artists
-scale = 17h20m54.559s -35d45m17.8s icrs
-scale_distance = 1.35 kpc
-arrows_pa = -55 deg
-
-[NGC6334IN_continuum]
 loc = 3 1, 3 2
-contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
