--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -32,6 +32,7 @@ contour_linewidth = 2.0
 contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
+enumerate_shift = 36
 # Units
 ignore_units = false
 labelpad = 5
@@ -57,210 +58,56 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[NGC6334IN_alma4_moment1]
+[I18182_alma3_moment1]
 loc = 0 0
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
+source = IRAS_18182-1433
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = 6.7 km/s
-label = NGC 6334I(N) ALMA4 CH$$_3$$CN
+shift_data = -61.12 km/s
+label = IRAS 18182-1433 ALMA3 CH$$_3$$CN
 # Range
-vmin = -6 km/s
-vmax = 6 km/s
+vmin = -7 km/s
+vmax = 7 km/s
 # Recenter
-center = 17h20m54.87122s -35d45m06.4309s icrs
-radius = 0.4 arcsec
+center = 18h21m09.12462s -14d31m48.5998s icrs
 # Artists
-scale = 17h20m54.842s -35d45m06.8s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 130 deg
+scale = 18h21m09.095s -14d31m49.0s icrs
+scale_distance = 3.58 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 10 deg, 130 deg
 
-[NGC6334IN_alma6_moment1]
+[I18182_alma5_moment1]
 loc = 0 1
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
-image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
-shift_data = 7.2 km/s
-label = NGC 6334I(N) ALMA6 CH$$_3$$OH
+set_xlabel = true
+set_ylabel = true
+source = IRAS_18182-1433
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma5_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -62.7 km/s
+label = IRAS 18182-1433 ALMA5 CH$$_3$$CN
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
 # Recenter
-center = 17h20m54.61962s -35d45m08.6715s icrs
+center = 18h21m09.01613s -14d31m47.9401s icrs
 radius = 0.3 arcsec
 # Artists
-scale = 17h20m54.598s -35d45m08.9s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 130 deg
+scale = 18h21m08.999s -14d31m48.2s icrs
+scale_distance = 3.58 kpc
+arrows_pa = 40 deg
 
-[NGC6334IN_alma11_moment1]
-loc = 0 2
-source = NGC_6334_I_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma11_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = 5.0 km/s
-label = NGC 6334I(N) ALMA11 CH$$_3$$OH
-# Range
-vmin = -8 km/s
-vmax = 8 km/s
-# Recenter
-center = 17h20m54.83871s -35d45m06.0527s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 17h20m54.818s -35d45m06.3s icrs
-scale_distance = 1.35 kpc
-arrows_pa = 160 deg
-
-[NGC6334IN_continuum]
-loc = 0 0, 0 1, 0 2
-contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[W33A_alma1a_moment1]
-loc = 1 0
-source = W33A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -37.9 km/s
-label = W33A ALMA1a CH$$_3$$OH
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 18h14m39.51004s -17d52m00.1338s icrs
-# Artists
-scale = 18h14m39.48s -17d52m00.6s icrs
-scale_distance = 2.53 kpc
-arrows_pa = -30 deg
-
-[W33A_alma1b_moment1]
-loc = 1 1
-source = W33A
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -38.2 km/s
-label = W33A ALMA1b CH$$_3$$OH
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 18h14m39.52226s -17d52m00.4531s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h14m39.505s -17d52m00.7s icrs
-scale_distance = 2.53 kpc
-arrows_pa = 90 deg
-
-[W33A_continuum]
-loc = 1 0, 1 1
-contour = ${contdir}/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G35.20_alma2_moment1]
-loc = 1 2
-source = G35.20-0.74_N
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = -30.0 km/s
-label = G35.20-0.74 N ALMA2 CH$$_3$$OH
-# Range
-vmin = -3 km/s
-vmax = 3 km/s
-# Recenter
-center = 18h58m13.03690s +01d40m35.9257s icrs
-# Artists
-scale = 18h58m13.008s +01d40m35.5s icrs
-scale_distance = 2.19 kpc
-arrows_pa = -23 deg
-
-[G35.20_continuum]
-loc = 1 2
-contour = ${contdir}/G35.20-0.74_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[IRAS18162_alma1_moment1]
-loc = 2 0
-source = IRAS_181622048
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
-shift_data = -45.69 km/s
-label = IRAS 18162-2048 ALMA1 c-HCOOH
-# Range
-vmin = -6 km/s
-vcenter = 0 km/s
-vmax = 10 km/s
-# Recenter
-center = 18h19m12.09528s -20d47m30.9566s icrs
-# Artists
-scale = 18h19m12.065s -20d47m31.4s icrs
-scale_distance = 1.30 kpc
-arrows_pa = -70 deg
-
-[IRAS18162_continuum]
-loc = 2 0
-contour = ${contdir}/IRAS_181622048.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G5.89-0.37_alma14_moment1]
-loc = 2 1
-source = G5.89-0.37
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma14_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -7.92 km/s
-label = G5.89-0.37 ALMA14 CH$$_3$$CN
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 18h00m30.63209s -24d04m03.0057s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h00m30.614s -24d04m03.22s icrs
-scale_distance = 2.99 kpc
-arrows_pa = -30 deg
-
-[G5.89-0.37_continuum]
-loc = 2 1
-contour = ${contdir}/G5.89-0.37.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G14.22-0.50_S_alma1_moment1]
-loc = 2 2
-source = G14.22-0.50_S
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-shift_data = -19.61 km/s
-label = G14.22-0.50 S ALMA1 CH$$_3$$OH
-# Range
-vmin = -6 km/s
-vmax = 6 km/s
-# Recenter
-center = 18h18m12.86247s -16d57m20.3666s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h19m12.065s -20d47m31.4s icrs
-scale_distance = 1.90 kpc
-arrows_pa = 170 deg
-
-[G14.22-0.50_S_continuum]
-loc = 2 2
-contour = ${contdir}/G14.22-0.50_S.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+[I18182_continuum]
+loc = 0 0, 0 1
+contour = ${contdir}/IRAS_18182-1433.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [NGC6334I_alma1_moment1]
-loc = 3 0
+loc = 0 2
 source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 #image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -276,10 +123,14 @@ center = 17h20m53.41869s -35d46m57.8969s icrs
 # Artists
 scale = 17h20m53.38s -35d46m58.3s icrs
 scale_distance = 1.35 kpc
-arrows_pa = 60 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 60 deg, 0 deg
 
 [NGC6334I_alma4_moment1]
-loc = 3 1
+loc = 1 0
 source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
 #image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -298,10 +149,14 @@ radius = 0.7 arcsec
 # Artists
 scale = 17h20m53.12s -35d46m59.8s icrs
 scale_distance = 1.35 kpc
-arrows_pa = 20 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 20 deg, 250 deg
 
 [NGC6334I_alma8_moment1]
-loc = 3 2
+loc = 1 1
 source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma8_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -319,8 +174,159 @@ scale_distance = 1.35 kpc
 arrows_pa = 50 deg
 
 [NGC6334I_continuum]
-loc = 3 0, 3 1, 3 2
+loc = 0 2, 1 0, 1 1
 contour = ${contdir}/NGC6334I.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
+
+[NGC6334IN_alma1_moment1]
+loc = 1 2
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 1.77 km/s
+label = NGC 6334I(N) ALMA1 CH$$_3$$OH
+# Range
+vmin = -8 km/s
+vmax = 8 km/s
+# Recenter
+center = 17h20m55.19138s -35d45m03.9525s icrs
+# Artists
+scale = 17h20m55.158s -35d45m04.4s icrs
+scale_distance = 1.35 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 310 deg, 35 deg
+
+[NGC6334IN_alma2_moment1]
+loc = 2 0
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = 3.9 km/s
+#shift_data = -0.74 km/s
+label = NGC 6334I(N) ALMA2 CH$$_3$$OH
+# Range
+vmin = -5 km/s
+vmax = 5 km/s
+# Recenter
+center = 17h20m54.59280s -35d45m17.3686s icrs
+# Artists
+scale = 17h20m54.559s -35d45m17.8s icrs
+scale_distance = 1.35 kpc
+arrows_pa = -55 deg
+
+[NGC6334IN_alma4_moment1]
+loc = 2 1
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 6.7 km/s
+label = NGC 6334I(N) ALMA4 CH$$_3$$CN
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 17h20m54.87122s -35d45m06.4309s icrs
+radius = 0.4 arcsec
+# Artists
+scale = 17h20m54.842s -35d45m06.8s icrs
+scale_distance = 1.35 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 130 deg, 40 deg
+
+[NGC6334IN_alma6_moment1]
+loc = 2 2
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
+image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
+shift_data = 7.2 km/s
+label = NGC 6334I(N) ALMA6 CH$$_3$$OH
+# Range
+vmin = -8 km/s
+vmax = 8 km/s
+# Recenter
+center = 17h20m54.61962s -35d45m08.6715s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 17h20m54.598s -35d45m08.9s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 130 deg
+
+[NGC6334IN_alma11_moment1]
+loc = 3 0
+source = NGC_6334_I_N
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma11_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = 5.0 km/s
+label = NGC 6334I(N) ALMA11 CH$$_3$$OH
+# Range
+vmin = -8 km/s
+vmax = 8 km/s
+# Recenter
+center = 17h20m54.83871s -35d45m06.0527s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 17h20m54.818s -35d45m06.3s icrs
+scale_distance = 1.35 kpc
+arrows_pa = 160 deg
+
+[NGC6334IN_continuum]
+loc = 1 2, 2 0, 2 1, 2 2, 3 0
+contour = ${contdir}/NGC_6334_I_N.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[W33A_alma1a_moment1]
+loc = 3 1
+source = W33A
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -37.9 km/s
+label = W33A ALMA1a CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h14m39.51004s -17d52m00.1338s icrs
+# Artists
+scale = 18h14m39.48s -17d52m00.6s icrs
+scale_distance = 2.53 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = -30 deg, 120 deg
+
+[W33A_alma1b_moment1]
+loc = 3 2
+source = W33A
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
+image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
+shift_data = -38.2 km/s
+label = W33A ALMA1b CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h14m39.52226s -17d52m00.4531s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h14m39.505s -17d52m00.7s icrs
+scale_distance = 2.53 kpc
+arrows_pa = 90 deg
+
+[W33A_continuum]
+loc = 3 1, 3 2
+contour = ${contdir}/W33A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
