--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -206,8 +206,37 @@ ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
-[G29_alma1_moment1]
+[G14.22-0.50_S_alma1_moment1]
 loc = 2 1
+source = G14.22-0.50_S
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+shift_data = -19.61 km/s
+label = G14.22-0.50 S ALMA1 CH$$_3$$OH
+# Range
+vmin = -6 km/s
+vmax = 6 km/s
+# Recenter
+center = 18h18m12.86247s -16d57m20.3666s icrs
+radius = 0.3 arcsec
+# Artists
+scale = 18h19m12.065s -20d47m31.4s icrs
+scale_distance = 1.90 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 170 deg, 75 deg
+
+[G14.22-0.50_S_continuum]
+loc = 2 1
+contour = ${contdir}/G14.22-0.50_S.config8.cont_avg.selfcal_0.5_hogbom.image.fits
+ignore_units = true
+beam_color = ${contour_colors}
+beam_zorder = 5
+
+[G29_alma1_moment1]
+loc = 2 2
 source = G29.96-0.02
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -222,18 +251,22 @@ radius = 0.6 arcsec
 # Artists
 scale = 18h46m03.742s -02d39m22.8s icrs
 scale_distance = 5.26 kpc
-arrows_pa = 155 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 155 deg, 142 deg
 #arrows_pa = 110 deg
 
 [G29_alma1_continuum]
-loc = 2 1
+loc = 2 2
 contour = ${contdir}/G29.96-0.02.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G333.12_alma1_moment1]
-loc = 2 2
+loc = 3 0
 source = G333.12-0.56
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width34.subcube.moment1.fits
@@ -247,10 +280,14 @@ center = 16h21m35.37589s -50d40m56.6044s icrs
 # Artists
 scale = 16h21m35.334s -50d40m57.00s icrs
 scale_distance = 3.3 kpc
-arrows_pa = 135 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 135 deg, 40 deg
 
 [G333.12_alma2_moment1]
-loc = 3 0
+loc = 3 1
 override_xlabel = true
 override_ylabel = true
 set_xlabel = true
@@ -269,17 +306,21 @@ radius = 0.35 arcsec
 # Artists
 scale = 16h21m36.221s -50d40m47.55s icrs
 scale_distance = 3.3 kpc
-arrows_pa = 90 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 90 deg, -35 deg
 
 [G333.12_continuum]
-loc = 2 2, 3 0
+loc = 3 0, 3 1
 contour = ${contdir}/G333.12-0.56.config8.selfcal.cont_avg.robust0.5.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G333.23_alma3_moment1]
-loc = 3 1
+loc = 3 2
 source = G333.23-0.06
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -293,37 +334,15 @@ center = 16h19m50.88363s -50d15m10.5272s icrs
 # Artists
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
-arrows_pa = 220 deg
+arrows = ${center}, ${center}, ${center}
+arrows_color = #f93dff, #02b829, #02b829
+arrows_ls = -, --, --
+arrows_style = ->, -, -
+arrows_pa = 220 deg, 133 deg, 221 deg
 
 [G333.23_alma3_continuum]
-loc = 3 1
+loc = 3 2
 contour = ${contdir}/G333.23-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
-ignore_units = true
-beam_color = ${contour_colors}
-beam_zorder = 5
-
-[G333.46_alma1_moment1]
-loc = 3 2
-source = G333.46-0.16
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
-#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
-image = ${results}/HNCO_10_0_10_-9_0_9__width30.subcube.moment1.fits
-shift_data = 43.55 km/s
-#label = ${source} ALMA1 CH$$_3$$OH
-label = ${source} ALMA1 HNCO
-# Range
-vmin = -3 km/s
-vmax = 3 km/s
-# Recenter
-center = 16h21m20.17674s -50d09m46.3768s icrs
-# Artists
-scale = 16h21m20.138s -50d09m46.8s icrs
-scale_distance = 2.9 kpc
-arrows_pa = 130 deg
-
-[G333.46_continuum]
-loc = 3 2
-contour = ${contdir}/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
