--- a/configs/plots/papers/group_moments.2.cfg
+++ b/configs/plots/papers/group_moments.2.cfg
@@ -32,6 +32,7 @@ contour_linewidth = 2.0
 contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
+enumerate_shift = 12
 # Units
 ignore_units = false
 labelpad = 5
@@ -57,8 +58,31 @@ arrows_linewidth = 3
 basedir = ../
 contdir = ${basedir}/source_data/continuum
 
-[G333.46_alma7_moment1]
+[G333.46_alma1_moment1]
 loc = 0 0
+source = G333.46-0.16
+results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
+#image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
+image = ${results}/HNCO_10_0_10_-9_0_9__width30.subcube.moment1.fits
+shift_data = 43.55 km/s
+#label = ${source} ALMA1 CH$$_3$$OH
+label = ${source} ALMA1 HNCO
+# Range
+vmin = -3 km/s
+vmax = 3 km/s
+# Recenter
+center = 16h21m20.17674s -50d09m46.3768s icrs
+# Artists
+scale = 16h21m20.138s -50d09m46.8s icrs
+scale_distance = 2.9 kpc
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 130 deg, 100 deg
+
+[G333.46_alma7_moment1]
+loc = 0 1
 source = G333.46-0.16
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma7_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -72,17 +96,21 @@ center = 16h21m20.17290s -50d09m48.8762s icrs
 # Artists
 scale = 16h21m20.132s -50d09m49.3s icrs
 scale_distance = 2.9 kpc
-arrows_pa = 130 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 130 deg, 209 deg
 
 [G333.46_alma7_continuum]
-loc = 0 0
+loc = 0 0, 0 1
 contour = ${contdir}/G333.46-0.16.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G335.579_alma1_moment1]
-loc = 0 1
+loc = 0 2
 source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -96,10 +124,14 @@ center = 16h30m58.76705s -48d43m53.8816s icrs
 # Artists
 scale = 16h30m58.72s -48d43m54.3s icrs
 scale_distance = 3.25 kpc
-arrows_pa = 150 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 150 deg, 240 deg
 
 [G335.579_alma3_moment1]
-loc = 0 2
+loc = 1 0
 source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -113,17 +145,21 @@ center = 16h30m58.63085s -48d43m51.2159s icrs
 # Artists
 scale = 16h30m58.59s -48d43m51.6s icrs
 scale_distance = 3.25 kpc
-arrows_pa = 202 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 202 deg, -72 deg
 
 [G335.579_continuum]
-loc = 0 1, 0 2
+loc = 0 2, 1 0
 contour = ${contdir}/G335.579-0.272.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G335.78_alma1_moment1]
-loc = 1 0
+loc = 1 1
 source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width44.subcube.moment1.fits
@@ -137,10 +173,14 @@ center = 16h29m47.33461s -48d15m52.2666s icrs
 # Artists
 scale = 16h29m47.29s -48d15m52.7s icrs
 scale_distance = 3.2 kpc
-arrows_pa = 215 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 215 deg, -30 deg
 
 [G335.78_alma2_moment1]
-loc = 1 1
+loc = 1 2
 source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
@@ -158,14 +198,14 @@ scale_distance = 3.2 kpc
 arrows_pa = 65 deg
 
 [G335.78_continuum]
-loc = 1 0, 1 1
+loc = 1 1, 1 2
 contour = ${contdir}/G335.78+0.17.config8.selfcal.cont_avg.robust0.5.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G336_alma1_moment1]
-loc = 1 2
+loc = 2 0
 source = G336.01-0.82
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -179,17 +219,21 @@ center = 16h35m09.25854s -48d46m47.6623s icrs
 # Artists
 scale = 16h35m09.218s -48d46m48.1s icrs
 scale_distance = 3.1 kpc
-arrows_pa = 125 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 125 deg, 205 deg
 
 [G336_continuum]
-loc = 1 2
+loc = 2 0
 contour = ${contdir}/G336.01-0.82.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G34_alma1_moment1]
-loc = 2 0
+loc = 2 1
 source = G34.43+0.24
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
@@ -203,17 +247,21 @@ center = 18h53m18.00684s +01d25m25.4228s icrs
 # Artists
 scale = 18h53m17.98s +01d25m25.0s icrs
 scale_distance = 3.03 kpc
-arrows_pa = 280 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 280 deg, 200 deg
 
 [G34_continuum]
-loc = 2 0
+loc = 2 1
 contour = ${contdir}/G34.43+0.24.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G343_alma1_moment1]
-loc = 2 1
+loc = 2 2
 source = G343.12-0.06
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
@@ -227,17 +275,21 @@ center = 16h58m17.20735s -42d52m07.4161s icrs
 # Artists
 scale = 16h58m17.17s -42d52m07.85s icrs
 scale_distance = 2.9 kpc
-arrows_pa = 230 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 230 deg, 135 deg
 
 [G343_continuum]
-loc = 2 1
+loc = 2 2
 contour = ${contdir}/IRAS165474247_G343.12-0.06.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G35.03_alma1_moment1]
-loc = 2 2
+loc = 3 0
 source = G35.03+0.35_A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -251,17 +303,21 @@ center = 18h54m00.65099s +02d01m19.3410s icrs
 # Artists
 scale = 18h54m00.62s +02d01m18.9s icrs
 scale_distance = 2.32 kpc
-arrows_pa = 310 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 310 deg, 110 deg 
 
 [G35.03_continuum]
-loc = 2 2
+loc = 3 0
 contour = ${contdir}/G35.03+0.35_A.config8.cont_avg.selfcal_0.5_hogbom.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
 beam_zorder = 5
 
 [G35.13_alma1_moment1]
-loc = 3 0
+loc = 3 1
 source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -277,10 +333,14 @@ center = 18h58m06.13626s +01d37m07.4306s icrs
 # Artists
 scale = 18h58m06.11s +01d37m07.0s icrs
 scale_distance = 2.2 kpc
-arrows_pa = 45 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
+arrows_pa = 45 deg, 145 deg
 
 [G35.13_alma2_moment1]
-loc = 3 1
+loc = 3 2
 source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -297,26 +357,8 @@ scale = 18h58m06.15s +01d37m07.9s icrs
 scale_distance = 2.2 kpc
 arrows_pa = 75 deg
 
-[G35.13_alma6_moment1]
-loc = 3 2
-source = G35.13-0.74
-results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
-image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
-shift_data = -35.53 km/s
-label = ${source} ALMA6 CH$$_3$$CN
-# Range
-vmin = -4 km/s
-vmax = 4 km/s
-# Recenter
-center = 18h58m06.27972s +01d37m07.2029s icrs
-radius = 0.3 arcsec
-# Artists
-scale = 18h58m06.262s +01d37m06.95s icrs
-scale_distance = 2.2 kpc
-arrows_pa = 95 deg
-
 [G35.13_continuum]
-loc = 3 0, 3 1, 3 2
+loc = 3 1, 3 2
 contour = ${contdir}/G35.13-0.74.config8.selfcal.cont_avg.robust0.5.image.fits
 ignore_units = true
 beam_color = ${contour_colors}
