--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -33,6 +33,7 @@ contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
 enumerate_shift = 24
+enumerate_modulus = 12
 # Units
 ignore_units = false
 labelpad = 5
