--- a/configs/extracted/pvmaps/G333.23-0.06_alma3b_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.23-0.06_alma3b_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = ./molecules
-pas = -55 35 190 200 210 220 280 290 300 310 deg
+pas = 125 180 215 270 deg
 
 [CH3CN_K2]
 molecule = CH3CN
