Change source markers

--- a/configs/plots/papers/group_moments.2.cfg
+++ b/configs/plots/papers/group_moments.2.cfg
@@ -46,8 +46,8 @@ beam_zorder = 4
 beam_color = #3bb802
 #Artists
 markers = ${center}
-markers_marker = ^
-markers_mec = #3bb802
+markers_marker = x
+markers_mec = k
 markers_fillstyle = none
 markers_ms = 10
 markers_mew = 4.0
