--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -333,6 +333,8 @@ vmax = 4 km/s
 # Recenter
 center = 16h19m50.88363s -50d15m10.5272s icrs
 # Artists
+markers = ${center}, 16h19m50.87824s -50d15m10.6063s icrs
+markers_marker = x, s
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
 arrows = ${center}, ${center}, ${center}
