--- a/configs/plots/papers/group_moments.4.cfg
+++ b/configs/plots/papers/group_moments.4.cfg
@@ -291,7 +291,7 @@ source = W33A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -37.9 km/s
-label = W33A ALMA1a CH$$_3$$OH
+label = W33A ALMA1a CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
@@ -312,7 +312,7 @@ source = W33A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -38.2 km/s
-label = W33A ALMA1b CH$$_3$$OH
+label = W33A ALMA1b CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
