Change arrow order for G333.23

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -338,10 +338,10 @@ markers_marker = x, s
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
 arrows = ${center}, ${center}, ${center}
-arrows_color = #f93dff, #02b829, #02b829
-arrows_ls = -, --, --
-arrows_style = ->, -, -
-arrows_pa = 220 deg, 133 deg, 221 deg
+arrows_color = #02b829, #02b829, #f93dff
+arrows_ls = --, --, -
+arrows_style = -, -, -> 
+arrows_pa = 133 deg, 221 deg, 220 deg
 
 [G333.23_alma3_continuum]
 loc = 3 2
