Change markers zorder

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -50,6 +50,7 @@ markers_mec = k
 markers_fillstyle = none
 markers_ms = 10
 markers_mew = 4.0
+markers_zorder = 7
 scale_size = 500 au
 arrows = ${center}
 arrows_color = #f93dff
