Add arrow length

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -339,6 +339,7 @@ markers_marker = x, s
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
 arrows = ${center}, ${center}, ${center}
+arrows_length = 0.5, 0.6, 0.5
 arrows_color = #02b829, #02b829, #f93dff
 arrows_ls = --, --, -
 arrows_style = -, -, -> 
