--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -269,6 +269,10 @@ beam_zorder = 5
 
 [G333.12_alma1_moment1]
 loc = 3 0
+override_xlabel = true
+override_ylabel = true
+set_xlabel = true
+set_ylabel = true
 source = G333.12-0.56
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width34.subcube.moment1.fits
@@ -290,10 +294,6 @@ arrows_pa = 135 deg, 40 deg
 
 [G333.12_alma2_moment1]
 loc = 3 1
-override_xlabel = true
-override_ylabel = true
-set_xlabel = true
-set_ylabel = true
 source = G333.12-0.56
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
@@ -327,7 +327,8 @@ source = G333.23-0.06
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 87.04 km/s
-label = ${source} ALMA3 CH$$_3$$CN
+#label = ${source} ALMA3 CH$$_3$$CN
+label = ${source} CH$$_3$$CN
 # Range
 vmin = -4 km/s
 vmax = 4 km/s
@@ -335,15 +336,17 @@ vmax = 4 km/s
 center = 16h19m50.88363s -50d15m10.5272s icrs
 # Artists
 markers = ${center}, 16h19m50.87824s -50d15m10.6063s icrs
-markers_marker = x, s
+markers_marker = x, x
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
-arrows = ${center}, ${center}, ${center}
-arrows_length = 0.5, 0.6, 0.5
-arrows_color = #02b829, #02b829, #f93dff
-arrows_ls = --, --, -
-arrows_style = -, -, -> 
-arrows_pa = 133 deg, 221 deg, 220 deg
+arrows = ${center}, 16h19m50.87824s -50d15m10.6063s icrs, ${center}
+arrows_length = 0.5, 0.6, 0.5, 0.5
+arrows_color = #02b829, #02b829, #f93dff, #f93dff
+arrows_ls = --, --, -, -
+arrows_style = -, -, -> , ->
+arrows_pa = 133 deg, 221 deg, 220 deg, 125 deg
+texts = 16h19m50.88363s -50d15m10.5272s icrs, 16h19m50.87824s -50d15m10.6063s icrs
+texts_text = ALMA3a, ALMA3b
 
 [G333.23_alma3_continuum]
 loc = 3 2
