--- a/configs/plots/papers/group_moments.3.cfg
+++ b/configs/plots/papers/group_moments.3.cfg
@@ -294,6 +294,8 @@ beam_zorder = 5
 
 [IRAS18162_alma1_moment1]
 loc = 3 0
+set_xlabel = true
+set_ylabel = true
 source = IRAS_181622048
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
@@ -305,6 +307,7 @@ vcenter = 0 km/s
 vmax = 10 km/s
 # Recenter
 center = 18h19m12.09528s -20d47m30.9566s icrs
+radius = 0.4 arcsec
 # Artists
 scale = 18h19m12.065s -20d47m31.4s icrs
 scale_distance = 1.30 kpc
