Change texts position

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -339,13 +339,13 @@ markers = ${center}, 16h19m50.87824s -50d15m10.6063s icrs
 markers_marker = x, x
 scale = 16h19m50.84s -50d15m10.88s icrs
 scale_distance = 5.2 kpc
-arrows = ${center}, 16h19m50.87824s -50d15m10.6063s icrs, ${center}
+arrows = ${center}, 16h19m50.87824s -50d15m10.6063s icrs, ${center}, 16h19m50.87824s -50d15m10.6063s icrs
 arrows_length = 0.5, 0.6, 0.5, 0.5
 arrows_color = #02b829, #02b829, #f93dff, #f93dff
 arrows_ls = --, --, -, -
 arrows_style = -, -, -> , ->
 arrows_pa = 133 deg, 221 deg, 220 deg, 125 deg
-texts = 16h19m50.88363s -50d15m10.5272s icrs, 16h19m50.87824s -50d15m10.6063s icrs
+texts = 16h19m50.89s -50d15m10.5272s icrs, 16h19m50.875s -50d15m10.61s icrs
 texts_text = ALMA3a, ALMA3b
 
 [G333.23_alma3_continuum]
