Change texts position

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -334,6 +334,7 @@ vmin = -4 km/s
 vmax = 4 km/s
 # Recenter
 center = 16h19m50.88363s -50d15m10.5272s icrs
+radius = 0.4 arcsec
 # Artists
 markers = ${center}, 16h19m50.87824s -50d15m10.6063s icrs
 markers_marker = x, x
@@ -345,7 +346,7 @@ arrows_color = #02b829, #02b829, #f93dff, #f93dff
 arrows_ls = --, --, -, -
 arrows_style = -, -, -> , ->
 arrows_pa = 133 deg, 221 deg, 220 deg, 125 deg
-texts = 16h19m50.89s -50d15m10.5272s icrs, 16h19m50.875s -50d15m10.61s icrs
+texts = 16h19m50.905s -50d15m10.53s icrs, 16h19m50.875s -50d15m10.61s icrs
 texts_text = ALMA3a, ALMA3b
 
 [G333.23_alma3_continuum]
