Add G333.23 ALMA3b to pv fit

--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -128,7 +128,7 @@ pvmap = ${results}/${name}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${
 pvnoise = 1.7 mJy/beam
 #nplot = 3
 
-[G333.23-0.06_alma3]
+[G333.23-0.06_alma3a]
 name = G333.23-0.06
 alma = 3
 distance = 5.2 kpc
@@ -137,6 +137,17 @@ paval = 220
 pvmap = ${results}/${name}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
 pvnoise = 1.1 mJy/beam
 pvnsigma = 5
+nplot = 3
+
+[G333.23-0.06_alma3b]
+name = G333.23-0.06
+alma = 3b
+distance = 5.2 kpc
+vlsr = -87.04 km/s
+paval = 125
+pvmap = ${results}/${name}_alma3b_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA${paval}.fits
+pvnoise = 1.3 mJy/beam
+pvnsigma = 3
 nplot = 3
 
 [G333.46-0.16_alma1]
