Update plot config after edge id

--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -392,3 +392,52 @@ model_offset0 = 0.03230520378155113
 model_info = 1
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
+[G333.23-0.06_alma3b_pvedge]
+structured_array = ../results/G333.23-0.06/c5c8/per_hot_core/alma3b_pvmaps/G333.23-0.06_alma3b_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA125.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G333.23-0.06_alma3b_keplerian_fit]
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 4.184455456724925 solMass
+model_sd_mass = 1.3013441112159132 solMass
+model_amplitude = -6.092739158628005
+model_x_0 = 0.019230769230769232
+model_alpha = 0.5
+model_vsys = -88.73993700484908
+model_offset0 = 0.03145645064124409
+model_sd_amplitude = 0.9474052606430179
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[G333.23-0.06_alma3b_unrestricted_fit]
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -75.45098425239625
+model_x_0 = 0.019230769230769232
+model_alpha = 2.3588301799072124
+model_vsys = -88.73993700484908
+model_offset0 = 0.03145645064124409
+model_sd_amplitude = 74.21887544093899
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.6908114091373775
+model_sd_vsys = 0.3664446129993403
+model_sd_offset0 = 0.007783190324202307
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
