Cange spine color

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -50,7 +50,7 @@ pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
-with_style = blue_border
+spine_color = deepskyblue
 
 [G10.62-0.38_alma1a_pvedge]
 loc = 0 0
