Use thicker borders

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps inferno aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
