--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -59,6 +59,7 @@ marker = o
 color = #46eff2
 linestyle = none
 plot_keys = OFFSET, VRAD
+legend = Edge
 
 [G10.62-0.38_alma1a_keplerian_fit]
 loc = 0 0
@@ -68,6 +69,7 @@ yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
+legend = Keplerian
 model_mass = 15.839053466606627 solMass
 model_amplitude = -11.853803492250195
 model_x_0 = 0.020202020202020204
@@ -131,30 +133,25 @@ model_sd_mass = 3.085026468706788 solMass
 model_vsys = -2.295489254670895
 model_offset0 = 0.08200997056659148
 
-[G10_alma1b_pvmap_rot]
-loc = 1 0
-source = G10.62-0.38
-alma = 1b
-paval = -30
-pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
-xlim = -0.5 0.5 arcsec
-hlines = 0.851 km/s
-rms = 1.6 mJy/beam
-vmax = 16 mJy/beam
+[G10.62-0.38_alma1a_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.839053466606627 solMass
+model_amplitude = 11.853803492250195
+model_x_0 = 0.04040404040404041
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -2.295489254670895
+model_offset0 = 0.08200997056659148
+model_info = 1
 
-[G10_alma1b_pvmap_out]
-loc = 1 1
-source = G10.62-0.38
-alma = 1b
-paval = 60
-pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
-xlim = -0.5 0.5 arcsec
-hlines = 0.851 km/s
-rms = 1.6 mJy/beam
-vmax = 16 mJy/beam
 
 [G10_alma1c_pvmap_rot]
-loc = 2 0
+loc = 1 0
 source = G10.62-0.38
 alma = 1c
 paval = 180
@@ -162,9 +159,10 @@ pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.P
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 25 mJy/beam
+spine_color = deepskyblue
 
 [G10.62-0.38_alma1c_pvedge]
-loc = 2 0
+loc = 1 0
 structured_array = ../results/G10.62-0.38/c5c8/per_hot_core/alma1c_pvmaps/G10.62-0.38_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.PA180.edge.dat
 marker = o
 color = #46eff2
@@ -172,7 +170,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G10.62-0.38_alma1c_keplerian_fit]
-loc = 2 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
@@ -195,7 +193,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G10.62-0.38_alma1c_unrestricted_fit]
-loc = 2 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
@@ -216,7 +214,7 @@ model_sd_offset0 = 0.008807836438302467
 model_info = 1
 
 [G10_alma1c_pvmap_out]
-loc = 2 1
+loc = 1 1
 source = G10.62-0.38
 alma = 1c
 paval = 270
@@ -226,7 +224,7 @@ rms = 1.6 mJy/beam
 vmax = 16 mJy/beam
 
 [G10.62-0.38_alma1c_infall]
-loc = 2 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 yunit = km/s
@@ -242,8 +240,24 @@ model_sd_mass = 0.7494661142470503 solMass
 model_vsys = -2.1787701537532964
 model_offset0 = 0.04048023986295073
 
+[G10.62-0.38_alma1c_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 4.960438860257873 solMass
+model_amplitude = 6.633659282336722
+model_x_0 = 0.04040404040404041
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -2.1787701537532964
+model_offset0 = 0.04048023986295073
+model_info = 1
+
 [G11.1_pvmap_rot]
-loc = 3 0
+loc = 2 0
 source = G11.1-0.12
 alma = 1
 paval = -65
@@ -255,7 +269,7 @@ rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
 
 [G11.1-0.12_alma1_pvedge]
-loc = 3 0
+loc = 2 0
 structured_array = ../results/G11.1-0.12/c5c8/per_hot_core/alma1_pvmaps/G11.1-0.12_alma1_rotation.CH3CN_K3.ra272.61770_dec-19.37509.PA-65.edge.dat
 marker = o
 color = #46eff2
@@ -263,7 +277,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G11.1-0.12_alma1_keplerian_fit]
-loc = 3 0
+loc = 2 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -286,7 +300,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G11.1-0.12_alma1_unrestricted_fit]
-loc = 3 0
+loc = 2 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -307,7 +321,7 @@ model_sd_offset0 = 0.012715429350034061
 model_info = 1
 
 [G11.1_pvmap_out]
-loc = 3 1
+loc = 2 1
 source = G11.1-0.12
 alma = 1
 paval = 25
@@ -319,7 +333,7 @@ rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
 
 [G11.1-0.12_alma1_infall]
-loc = 3 1
+loc = 2 1
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -335,40 +349,8 @@ model_sd_mass = 1.4501545688387307 solMass
 model_vsys = 27.531078190332376
 model_offset0 = 0.06645727389447786
 
-[G10.62-0.38_alma1a_infall_mirror]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 15.839053466606627 solMass
-model_amplitude = 11.853803492250195
-model_x_0 = 0.04040404040404041
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -2.295489254670895
-model_offset0 = 0.08200997056659148
-model_info = 1
-
-[G10.62-0.38_alma1c_infall_mirror]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 4.960438860257873 solMass
-model_amplitude = 6.633659282336722
-model_x_0 = 0.04040404040404041
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -2.1787701537532964
-model_offset0 = 0.04048023986295073
-model_info = 1
-
 [G11.1-0.12_alma1_infall_mirror]
-loc = 3 1
+loc = 2 1
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
@@ -381,5 +363,111 @@ model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = 27.531078190332376
 model_offset0 = 0.06645727389447786
+model_info = 1
+
+[G11.92_alma1a_pvmap_rot]
+loc = 3 0
+source = G11.92-0.61
+alma = 1a
+paval = 129
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
+hlines = 35.1 km/s
+rms = 1.1 mJy/beam
+vmax = 45 mJy/beam
+spine_color = deepskyblue
+
+[G11.92-0.61_alma1a_pvedge]
+loc = 3 0
+structured_array = ../results/G11.92-0.61/c5c8/per_hot_core/alma1a_pvmaps/G11.92-0.61_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA129.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G11.92-0.61_alma1a_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.46751328093813 solMass
+model_amplitude = -19.86161378765654
+model_x_0 = 0.02967359050445104
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.0050221537082416 solMass
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+model_sd_amplitude = 0.6711032958288893
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G11.92-0.61_alma1a_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -43.14870301882435
+model_x_0 = 0.02967359050445104
+model_alpha = 0.913509817531812
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+model_sd_amplitude = 4.19183432419909
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.05004528940455827
+model_sd_vsys = 0.20156238885738295
+model_sd_offset0 = 0.005728743163311211
+model_info = 1
+
+[G11.92_alma1a_pvmap_out]
+loc = 3 1
+source = G11.92-0.61
+alma = 1a
+paval = 219
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
+hlines = 35.1 km/s
+rms = 1.1 mJy/beam
+vmax = 45 mJy/beam
+
+[G11.92-0.61_alma1a_infall]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.46751328093813 solMass
+model_amplitude = -19.86161378765654
+model_x_0 = 0.059347181
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.0050221537082416 solMass
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+
+[G11.92-0.61_alma3_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.001263295019477 solMass
+model_amplitude = 9.87903195940451
+model_x_0 = 0.05934718100890208
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.98235303900969
+model_offset0 = -0.006730312863536275
 model_info = 1
 
